--- a/index.html
+++ b/index.html
@@ -1,11 +1,13 @@
 <!DOCTYPE html>
 <html>
 	<head>
-		<title>I have a back bone</title>
+		<meta charset="UTF-8" />
+        <title>Backbone.js Web App</title>
+        <link rel="stylesheet" href="assets/css/screen.css" />
 	</head>
 	<body>
-		<button id="add-friend">Add Friend</button>
-		<ul id="friends-list"></ul>
+		<div id="contacts"></div>
+		
 		<!-- JS -->
 		<!--
 		<script src="http://ajax.googleapis.com/ajax/libs/jquery/1.4.4/jquery.min.js"></script>
