--- a/index.html
+++ b/index.html
@@ -7,6 +7,17 @@
 	</head>
 	<body>
 		<div id="contacts"></div>
+		<!-- template -->
+		<script id="contactTemplate" type="text/template">
+		    <img src="<%= photo %>" alt="<%= name %>" />
+		    <h1><%= name %><span><%= type %></span></h1>
+		    <div><%= address %></div>
+		    <dl>
+		        <dt>Tel:</dt><dd><%= tel %></dd>
+		        <dt>Email:</dt><dd><a href="mailto:<%= email %>"><%= email %></a></dd>
+		    </dl>
+		</script>
+		<!-- END template -->
 		
 		<!-- JS -->
 		<!--
