wip, adding filters

--- a/index.html
+++ b/index.html
@@ -6,7 +6,11 @@
         <link rel="stylesheet" href="assets/css/screen.css" />
 	</head>
 	<body>
-		<div id="contacts"></div>
+		<div id="contacts">
+			<header>
+			    <div id="filter"><label>Show me:</label></div>
+			</header>
+		</div>
 		<!-- template -->
 		<script id="contactTemplate" type="text/template">
 		    <img src="<%= photo %>" alt="<%= name %>" />
