--- a/index.html
+++ b/index.html
@@ -29,6 +29,7 @@
 		        <dt>Tel:</dt><dd><%= tel %></dd>
 		        <dt>Email:</dt><dd><a href="mailto:<%= email %>"><%= email %></a></dd>
 		    </dl>
+		    <button class="delete">Delete</button>
 		</script>
 		<!-- END template -->
 		
