added the form input display fix and cleaned up data

--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
 	<body>
 		<div id="contacts">
 			<header>
+				<a id="showForm" href="#">Add new contact</a>
 			    <div id="filter"><label>Show me:</label></div>
 			</header>
 			<form id="addContact" action="#">
